--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,12 @@ datasources:
   default:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
-    password: ''
+    password: 'postgres'
     driver-class-name: org.postgresql.Driver
     db-type: postgres
 flyway:
   datasources:
     default:
       enabled: true
+#problem:
+#  typeBaseUri: http://docs.my-site.com/errors/
